# SiBaBe-fullstack

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  Cargo.toml  Dockerfile  LICENSE  README.md  next-sitemap.config.js  next.config.js  package.json  tailwind.config.js
.github/workflows/: lint.yml
.husky/: post-merge  pre-commit
api/: Cargo.toml
api/src/: main.rs  utils.rs
api/src/api/: carts.rs  mod.rs  orders.rs  products.rs  reports.rs  reviews.rs  users.rs
prisma/: Cargo.toml  schema.prisma
src/: data.js  middleware.ts
src/components/: CartRow.tsx  ConfirmRemoveModal.tsx  HistoryRow.tsx  ManageOrderRow.tsx  NextImage.tsx  OrderRow.tsx  ProductCard.tsx  ProductDetail.tsx  ReviewModal.tsx  Search.tsx  Seo.tsx  Separator.tsx  UploadModal.tsx
src/components/buttons/: Button.tsx  IconButton.tsx
src/components/forms/: TextArea.tsx
src/components/hoc/: withAuth.tsx
src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
src/components/links/: ArrowLink.tsx  ButtonLink.tsx  UnstyledLink.tsx
src/components/modals/: AddAddress.tsx  AddProduction.tsx  ConfirmRemove.tsx  ProductDetail.tsx  Review.tsx  Upload.tsx
src/hooks/: redux.ts  useScrollPosition.tsx
src/lib/: rspc.ts  store.ts  supabase.ts
src/pages/: _app.tsx  _document.tsx  cart.tsx  components.tsx  history.tsx  index.tsx  order.tsx  orders.tsx  products.tsx  report.tsx
src/redux/: index.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: api.ts  isAdmin.ts  loading.ts  thousandSeparator.ts
web/: .gitignore  package.json
(+53 files in other folders)
