[workspace]
resolver = "2"
members = ["prisma", "api"]
default-members = ["api"]

[workspace.dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag = "0.6.8", features = [
  "mysql",
  "rspc",
  "migrations",
], default-features = false }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag = "0.6.8", features = [
  "mysql",
  "rspc",
  "migrations",
], default-features = false }
rspc = { version = "0.1.3", features = ["axum"] }

[workspace.metadata.pkg-config]
openssl = "0.0.3"